# Stack-CPP-2020

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Menu.h  README.md  Stack.cpp  Stack.h  main.cpp
src/: CMakeLists.txt  Menu.h  Stack.h
test/: CMakeLists.txt  stackTest.cpp  testMain.cpp
