# CMakeList.txt : CMake project for Stack-CPP-2020, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Stack-CPP-2020 "main.cpp" "Stack.h" "Stack.cpp")

# TODO: Add tests and install targets if needed.
